--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "bip39": "^3.1.0",
+    "dotenv": "^16.5.0",
     "ed25519-hd-key": "^1.3.0",
     "node-telegram-bot-api": "^0.66.0"
   }
