--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-BOT_TOKEN=8056003531:AAH7L5065hIKoNaEUG6Cvx5oioR8Ri1t-MI
+BOT_TOKEN=8056003531:AAGc4tK-YVP0YhMRwF65y5YGP3EyrhNSegs
 MNEMONIC=helmet flavor onion copy alter elegant worry atom chat visit tourist slice
+MINT_ADDRESS=6jVJVxLeK6HrkLEiyVfUM4WPco5XnzLpiQA6t24zs7Zz
+PRICE_PER_SOL=0.1
